--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -10,6 +10,6 @@
 
 
   <br>
-  <img src="<%=bookmark.movie.poster_url%>" alt="bookmark.movie.title" width: 200px>
+  <img src="<%=bookmark.movie.poster_url%>" alt="bookmark.movie.title">
 
   <% end %>
